Add complete cv

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <header>
+        <a href="./sobremi.html">Sobre mí</a>
         <img src="./assets/_DSC7387 (3).JPG" alt=""/>
+        <div>
+            <p>Contacta conmigo:</p>
+            <p>Gmail: juandiegorojasarredondo@gmail.com</p>
+            <p>Número: +573112425911</p>
+        </div>
     </header>
     <div class="title"><h1>CURRICULUM VITAE JUAN DIEGO ROJAS</h1></div>
 
@@ -29,6 +35,6 @@
         <p><span>2023:</span> Modificación y actualización de página web para una app de reservas deportivas</p>
         <p><span>2023:</span> Creación de una página web para gestión de dispositivos gps con visualización de mapas, gestión de usuarios y dispositivos</p>
     </section>
-    <footer> <p>Contactos:</p> <i> <img src="./assets/insta.svg" alt="instagram"></i> <i><img src="./assets/link.svg" alt=""></i> </footer>
+    <footer> <p>Mis redes:</p> <a href="https://github.com/DiegxR"><i> <img src="./assets/icons8-github.svg" alt="github"></i></a> <a href="https://www.linkedin.com/in/diego-rojas-266963255/"><i><img src="./assets/link.svg" alt=""></i></a>  </footer>
 </body>
 </html>
